# which-gpu-fastest

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.claude/agents/: product-manager.md  programmer.md  test-writer.md
configs/: default_config.yaml
docs/: MARKET_RESEARCH.md  PRD.md  USAGE.md  index.html
torch_gpu_benchmark/: __init__.py  cli.py
torch_gpu_benchmark/core/: __init__.py  benchmark.py  device_info.py  timer.py
torch_gpu_benchmark/models/: __init__.py  base.py  cnn.py  generative.py  transformers.py
torch_gpu_benchmark/reporters/: __init__.py  csv_reporter.py  html_reporter.py  json_reporter.py  text_reporter.py
torch_gpu_benchmark/utils/: __init__.py
