[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "which-gpu-fastest"
version = "0.1.0"
description = "A command-line tool for benchmarking PyTorch performance on different hardware (GPU/CPU)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "LT1st", email = "lutao@example.com"}
]
maintainers = [
    {name = "LT1st", email = "lutao@example.com"}
]
keywords = ["pytorch", "gpu", "benchmark", "deep-learning", "performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Benchmark",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
]

[project.urls]
Homepage = "https://github.com/LT1st/which-gpu-fastest"
Documentation = "https://github.com/LT1st/which-gpu-fastest#readme"
Repository = "https://github.com/LT1st/which-gpu-fastest.git"
Issues = "https://github.com/LT1st/which-gpu-fastest/issues"

[project.scripts]
torch-gpu-benchmark = "torch_gpu_benchmark.cli:main"

[tool.setuptools]
packages = ["torch_gpu_benchmark", "torch_gpu_benchmark.core", "torch_gpu_benchmark.models", "torch_gpu_benchmark.reporters", "torch_gpu_benchmark.utils"]

[tool.setuptools.package-data]
torch_gpu_benchmark = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
